bug 20703, bug 20608 (r=stevo)     - [devsync] scrollwheel on device screen causes empty gap     - missing css rule on device screen progress area
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@18212 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -904,6 +904,10 @@ sb-device-info-panel {
   border-bottom: 1px solid rgb(67,65,76);
 }
 
+sb-device-info-panel[collapsed="true"] {
+  border-bottom: 0px;
+}
+
 sb-device-managetabs {
   margin-left: 10px;
   margin-right: 10px;
